--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 #MyBatis
-spring.datasource.url=jdbc:mysql://localhost:3306/housedata2?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
