--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,11 +29,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	//JPA, 스프링 데이터 JPA 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//스프링 시큐리티
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//스프링 validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-	implementation 'com.querydsl:querydsl-jpa'
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	annotationProcessor "jakarta.annotation:jakarta.persistence-api"
+
+//	implementation 'com.querydsl:querydsl-jpa'
+//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//	annotationProcessor "jakarta.annotation:jakarta.persistence-api"
+	//현재 에러남
+
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -43,6 +50,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
+	// https://mvnrepository.com/artifact/javax.mail/javax.mail-api//메일기능
+	implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
 
 	//openvidu 의존성
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.18.0'
