--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#MyBatis
-spring.datasource.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC
+#DB??
+spring.datasource.url=jdbc:mysql://localhost:3306/temp?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
