--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,15 +4,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'projectE107'
+group = 'com'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
 
 repositories {
 	mavenCentral()
@@ -22,7 +16,7 @@ dependencies {
 	//swagger 추가
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	
+
 	//spring 추가
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,7 +50,6 @@ dependencies {
 
 	//openvidu 의존성
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.18.0'
-
 }
 
 tasks.named('test') {
